# critter

./: CMakeLists.txt  LICENSE
example/: CMakeLists.txt  cert.pem  key.pem  main.cpp
example/www/: ServerConnection.js  index.html
include/critter/: webserver.h
include/critter/detail/: registry.h  serve_files_handler.h  websocket_session.h
include/httpserver/: httpserver.h  registry.h  serve_files_handler.h  websocket_session.h
